Fix calculation of --cw and --rest
The issue occurs because 100vw includes the width of the vertical scrollbar, while the container's width excludes it. This causes the element to be slightly too wide, forcing a horizontal scrollbar.

--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -10,8 +10,8 @@
   --font-header: 'Source Sans 3';
   --font-text: 'Open Sans';
 
-  --cw: calc(min(100vw, 1200px));
-  --rest: calc((100vw - var(--cw)) / 2);
+  --cw: calc(min(100%, 1200px));
+  --rest: calc((100% - var(--cw)) / 2);
 }
 
 [data-theme='dark'] {
